new file:   css/styles.css modified:   index.html

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
         <li><a href=""></a>Terms of Service</li>
         <li><a href=""></a>Cookies Settings</li>
       </ul>
+      <p>2022 FoodSta. All right reserved.</p>
     </footer>
   </body>
 </html>
